# meadow

./: .gitignore  Cargo.toml  Deny.toml  README.md
.github/: rust.yml
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: criterion.rs  my_benchmark.rs
benchmarks/criterion/: Cargo.toml  README.md
benchmarks/criterion/benches/: bissel.rs  meadow.rs
crates/bissel_dylib/: Cargo.toml
crates/bissel_dylib/src/: lib.rs
crates/bissel_internal/: Cargo.toml
crates/bissel_internal/src/: networks.rs
crates/bissel_std/: Cargo.toml
crates/bissel_std/src/: lib.rs
design/: notes.md
examples/: async_host.rs  async_node.rs  benchmark.rs  build_node.rs  external_runtime.rs  handshake.rs  host.rs  host_and_single_node.rs  many_local_clients.rs  multiple_nodes.rs  node.rs  node_subscription.rs  quic.rs  quic_network.rs  quic_subscription.rs  read_archive.rs  readme.rs  simple.rs  simple_host.rs  simple_node.rs  stress.rs  subscription.rs  topics.rs  udp.rs  unify.rs
pymeadow/: Cargo.toml  README.md  pyproject.toml  test.py
pymeadow/src/: host.rs  lib.rs  msg.rs  node.rs
src/: error.rs  host.rs  lib.rs  msg.rs  networks.rs  node.rs
src/error/: host.rs  host_operation.rs  mod.rs  quic.rs  redb.rs
src/host/: config.rs  host.rs  mod.rs  network_config.rs  quic.rs  redb.rs  tcp.rs  tcp_config.rs  udp.rs  udp_config.rs
src/node/: active.rs  config.rs  idle.rs  mod.rs  net_config.rs  network_config.rs  private.rs  quic.rs  subscription.rs  tcp_config.rs  udp_config.rs
src/node/blocking/: config.rs  mod.rs  network_config.rs
src/node/blocking/quic/: active.rs
src/node/blocking/tcp/: mod.rs  net_config.rs  subscription.rs
src/node/blocking/udp/: active.rs  idle.rs  subscription.rs
src/node/nonblocking/: config.rs  mod.rs  network_config.rs
src/node/nonblocking/quic/: active.rs  idle.rs  subscription.rs
src/node/nonblocking/tcp/: active.rs  idle.rs  mod.rs  subscription.rs
src/node/nonblocking/udp/: active.rs  idle.rs  subscription.rs
src/node/old/: config.rs  mod.rs
src/node/old/quic/: idle.rs  subscription.rs
src/node/old/tcp/: active.rs  idle.rs
src/node/quic/: active.rs  idle.rs  mod.rs  quic.rs  subscription.rs
src/node/tcp/: active.rs  idle.rs  mod.rs  subscription.rs
src/node/udp/: active.rs  idle.rs  mod.rs  subscription.rs
tests/: host.rs  integration.rs  postcard.rs  quic_integration.rs  tcp_integration.rs  udp_integration.rs
tests/common/: mod.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
