[package]
name = "bissel"
version = "0.2.0"
description = "Robotics-focused publish-subscribe/request-reply middleware for embedded Linux"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/quietlychris/bissel"
keywords = ["robotics", "middleware", "autonomy"]
categories = ["science::robotics", "network-programming"]

[lib]
name = "bissel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["tools/ci"]

[dependencies]
# de/serialization and message sending
serde = {version = "1.0.136", default-features = false, features = ["derive"]}
postcard = {version = "0.7.3", features = ["alloc"]}
hex-slice = "0.1.4"
chrono = {version = "0.4", features = ["serde"]}
# key value store, networking, and async
sled = "0.34.6"
pnet_datalink = "0.29.0"
tokio = { version = "1.16.1", features = ["net", "rt-multi-thread", "io-util", "sync", "time"] }
# logging
tracing = "0.1.29"

[dev-dependencies]
# command-line utilties
clap = "3.0.13"
# logging to file
tracing-subscriber = "0.3.7"
tracing-appender = "0.2.0"
# benchmarking
rand = "0.8"
# Make tokio macro available
tokio = { version = "1.16.1", features = ["macros", "signal"] }

