[package]
name = "pymeadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymeadow"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.19.0"
# Importing Meadow without QUIC enabled
meadow = { path = "../" }