[package]
name = "bissel_dylib"
version = "0.2.0"
edition = "2018"
description = "Allow Bissel to be dynamically-linked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bissel_std = { path = "../bissel_std", version = "0.2"}