[package]
name = "bissel_dylib"
version = "0.2.0"
edition = "2018"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
description = "Allow Bissel to be dynamically-linked"
license = "LGPL-3.0"
repository = "https://github.com/quietlychris/bissel"
keywords = ["robotics", "middleware", "autonomy"]
categories = ["simulation","network-programming", "science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bissel_dylib"
crate-type = ["dylib"]

[dependencies]
bissel_internal = { path = "../bissel_internal", version = "0.2"}